praticas/6-k8s/2-blue_red/2-deploy/3-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color
  labels:
    group: color
spec:
  rules:
    - host: tales.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: color
                port:
                  number: 80
  tls:
  - hosts:
    - tales.com
